# Nara

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  THIRDPARTY_NOTICES  build.ninja  debug.ninja  output.data  posix-debug.ninja  posix-release.ninja  release.ninja  tests.ninja
.github/workflows/: main.yml  ubuntu.yml  windows.yml
assets/: ambient01.au  authors.md  cliff1.sgi  cliff2.sgi  colormap.sgi  detail.sgi  details.sgi  dirt.sgi  grass.sgi  gray.sgi  heightmap.sgi  lightmap.sgi  lofi.sgi  masks.sgi  masksmap.sgi  normalmap.sgi  pink.sgi  rock.sgi  silly-loop.au  window.sgi
assets/scripts/: camera.rb  common.rb  point.rb
resources/: build.ninja  colormap.sgi  debug.ninja  default.jcfg  heightmap.sgi  inverse-square-law.py  readme.txt  release.ninja  simplex-noise.sgi
source/: c-ify.py  context-gl.c  context-gl.h  context-input.c  context-opengl.c  context-private.h  context.c  context.h  entity.c  entity.h  game-camera.c  game-player.c  game.h  nara.c  terrain.c  terrain.h
source-sdk/: sdk.c
source/engine/: context-input.c  context-opengl.c  context-private.h  context-time.c  context.c  context.h  debug-fragment.glsl  debug-vertex.glsl  entity.c  entity.h  glad.h  misc.c  misc.h  mixer.c  mixer.h  nara.c  nterrain.c  nterrain.h  options.c  options.h  red-fragment.glsl  red-vertex.glsl  skydome.c  skydome.h  terrain-fragment.glsl  terrain-vertex.glsl  terrain.c  terrain.h  timer.c  timer.h  tiny-gl.c  tiny-gl.h  vm.c  vm.h
source/engine/context/: context.c  context.h  input.c  objects.c  private.h  state.c
source/engine/mixer/: dsp.c  mixer.c  mixer.h  private.h  sample.c
source/engine/vm/: definitions.c  private.h  vm.c  vm.h
source/game/: camera.c  camera.rb  common.rb  game.h  nara.c  nara.rb  player.rb  point.c  point.rb
source/lib-glad/: CMakeLists.txt  glad.c
source/sdk/: bakery.c  erosion.c  erosion.h  sdk.c  simplex.c  simplex.h
source/shaders/: red-fragment.glsl  red-vertex.glsl  terrain-fragment.glsl  terrain-vertex.glsl  white-fragment.glsl  white-vertex.glsl
source/tests/: canvas.c  canvas.h  inverse-square-law.py  nterrain-test.broken.c  nterrain-tests.c
tools/: c-ify.py  nterrain-test.c  to-hfile.rb
